Fix alignment for callouts - margin should account for the border

--- a/kanisa/static/kanisa/css/kanisa.css
+++ b/kanisa/static/kanisa/css/kanisa.css
@@ -497,7 +497,7 @@ table.song-table form {
   border-left: 5px solid #eee;
   background-color: #f0f7fd;
   border-color: #d0e3f0;
-  margin-left: -15px;
+  margin-left: -20px;
   font-size: 120%;
 }
 
